syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.training.marketplace.cart.modal.response";

// Generic response for cart operations.
message DefaultCartResponse {
  bool success = 1;
  string message = 2;
}
