syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.training.marketplace.cart.entity";

// Represents a product.
message ProductCart {
  string product_id = 1;
  string product_name = 2;
  double product_price = 3;
  string product_image = 4;
  int32 product_cart_quantity = 5;
}
